--- a/UnitTests/Linux/UnitTests.project
+++ b/UnitTests/Linux/UnitTests.project
@@ -5,28 +5,62 @@
       <![CDATA[00020001N0005Debug0000000000000001N0007Release000000000000]]>
     </Plugin>
   </Plugins>
+  <VirtualDirectory Name="include">
+    <File Name="../Src/UnitTests.h"/>
+    <File Name="../Src/TestSystem.h"/>
+    <File Name="../Src/TestScene.h"/>
+    <File Name="../Src/TestMath.h"/>
+    <File Name="../Src/TestImage.h"/>
+    <File Name="../Src/TestFoundation.h"/>
+    <File Name="../Src/TestBuild.h"/>
+  </VirtualDirectory>
   <Description/>
   <Dependencies/>
   <VirtualDirectory Name="src">
-    <File Name="main.cpp"/>
+    <File Name="../Src/UnitTests.cpp"/>
+    <File Name="../Src/TestSystem.cpp"/>
+    <File Name="../Src/TestScene.cpp" ExcludeProjConfig="Debug;Release;"/>
+    <File Name="../Src/TestMath.cpp"/>
+    <File Name="../Src/TestImage.cpp" ExcludeProjConfig="Debug;Release;"/>
+    <File Name="../Src/TestFoundation.cpp"/>
+    <File Name="../Src/TestBuild.cpp" ExcludeProjConfig="Debug;Release;"/>
   </VirtualDirectory>
+  <Dependencies Name="Release">
+    <Project Name="Foundation"/>
+    <Project Name="Math"/>
+    <Project Name="System"/>
+  </Dependencies>
+  <Dependencies Name="Debug">
+    <Project Name="Foundation"/>
+    <Project Name="Math"/>
+    <Project Name="System"/>
+  </Dependencies>
   <Settings Type="Executable">
     <GlobalSettings>
-      <Compiler Options="" C_Options="" Assembler="">
+      <Compiler Options="-Wno-switch;-std=c++17" C_Options="" Assembler="">
         <IncludePath Value="."/>
+        <IncludePath Value="../../Modules/Foundation/Inc"/>
+        <IncludePath Value="../../Modules/Math/Inc"/>
+        <IncludePath Value="../../Modules/System/Inc"/>
+        <Preprocessor Value="PLATFORM_LINUX"/>
       </Compiler>
-      <Linker Options="">
-        <LibraryPath Value="."/>
-      </Linker>
+      <Linker Options=""/>
       <ResourceCompiler Options=""/>
     </GlobalSettings>
     <Configuration Name="Debug" CompilerType="clang( tags/RELEASE_900/final )" DebuggerType="LLDB Debugger" Type="Executable" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
-      <Compiler Options="-g;-O0;-Wall" C_Options="-g;-O0;-Wall" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" PCHFlags="" PCHFlagsPolicy="0">
-        <IncludePath Value="."/>
+      <Compiler Options="-g" C_Options="-g" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" PCHFlags="" PCHFlagsPolicy="0">
+        <Preprocessor Value="CONFIG_DEBUG"/>
       </Compiler>
-      <Linker Options="" Required="yes"/>
+      <Linker Options="" Required="yes">
+        <LibraryPath Value="../../Modules/System/Linux/Debug"/>
+        <LibraryPath Value="../../Modules/Math/Linux/Debug"/>
+        <LibraryPath Value="../../Modules/Foundation/Linux/Debug"/>
+        <Library Value="System"/>
+        <Library Value="Math"/>
+        <Library Value="Foundation"/>
+      </Linker>
       <ResourceCompiler Options="" Required="no"/>
-      <General OutputFile="$(IntermediateDirectory)/$(ProjectName)" IntermediateDirectory="./Debug" Command="./$(ProjectName)" CommandArguments="" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="$(IntermediateDirectory)" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="no"/>
+      <General OutputFile="$(IntermediateDirectory)/$(ProjectName)" IntermediateDirectory="./Debug" Command="./$(ProjectName)" CommandArguments="" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="$(IntermediateDirectory)" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
       <BuildSystem Name="Default"/>
       <Environment EnvVarSetName="&lt;Use Defaults&gt;" DbgSetName="&lt;Use Defaults&gt;">
         <![CDATA[]]>
@@ -60,13 +94,19 @@
       </Completion>
     </Configuration>
     <Configuration Name="Release" CompilerType="clang( tags/RELEASE_900/final )" DebuggerType="LLDB Debugger" Type="Executable" BuildCmpWithGlobalSettings="append" BuildLnkWithGlobalSettings="append" BuildResWithGlobalSettings="append">
-      <Compiler Options="-O2;-Wall" C_Options="-O2;-Wall" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" PCHFlags="" PCHFlagsPolicy="0">
-        <IncludePath Value="."/>
-        <Preprocessor Value="NDEBUG"/>
+      <Compiler Options="-O2" C_Options="-O2" Assembler="" Required="yes" PreCompiledHeader="" PCHInCommandLine="no" PCHFlags="" PCHFlagsPolicy="0">
+        <Preprocessor Value="CONFIG_RELEASE"/>
       </Compiler>
-      <Linker Options="" Required="yes"/>
+      <Linker Options="" Required="yes">
+        <LibraryPath Value="../../Modules/System/Linux/Release"/>
+        <LibraryPath Value="../../Modules/Math/Linux/Release"/>
+        <LibraryPath Value="../../Modules/Foundation/Linux/Release"/>
+        <Library Value="System"/>
+        <Library Value="Math"/>
+        <Library Value="Foundation"/>
+      </Linker>
       <ResourceCompiler Options="" Required="no"/>
-      <General OutputFile="$(IntermediateDirectory)/$(ProjectName)" IntermediateDirectory="./Release" Command="./$(ProjectName)" CommandArguments="" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="$(IntermediateDirectory)" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="no"/>
+      <General OutputFile="$(IntermediateDirectory)/$(ProjectName)" IntermediateDirectory="./Release" Command="./$(ProjectName)" CommandArguments="" UseSeparateDebugArgs="no" DebugArguments="" WorkingDirectory="$(IntermediateDirectory)" PauseExecWhenProcTerminates="yes" IsGUIProgram="no" IsEnabled="yes"/>
       <BuildSystem Name="Default"/>
       <Environment EnvVarSetName="&lt;Use Defaults&gt;" DbgSetName="&lt;Use Defaults&gt;">
         <![CDATA[]]>
