--- a/Modules/Math/Linux/Math.project
+++ b/Modules/Math/Linux/Math.project
@@ -7,7 +7,7 @@
   </Plugins>
   <Description/>
   <Dependencies/>
-  <VirtualDirectory Name="src">
+  <VirtualDirectory Name="Src">
     <File Name="../Src/tSpline.cpp"/>
     <File Name="../Src/tRandom.cpp"/>
     <File Name="../Src/tLinearAlgebra.cpp"/>
@@ -15,7 +15,7 @@
     <File Name="../Src/tGeometry.cpp"/>
     <File Name="../Src/tColour.cpp"/>
   </VirtualDirectory>
-  <VirtualDirectory Name="include">
+  <VirtualDirectory Name="Inc">
     <File Name="../Inc/Math/tVector4.h"/>
     <File Name="../Inc/Math/tVector3.h"/>
     <File Name="../Inc/Math/tVector2.h"/>
